Direct-Sincro payment implemented
makePayment route in SCOT fixed
new route in Open Api added (allows payment in Direct-Sincro)
